# tcremp

./: .gitignore  10x_tcr_emb_.ipynb  10x_tcremb.ipynb  10x_tcremb_working.ipynb  10x_tcremb_working2.ipynb  10x_tcremb_working3.ipynb  10x_tetramer_cluster.ipynb  README.md  ank_spond_scrnaseq.ipynb  compare_methods.ipynb  data_prep.ipynb  data_proc.py  data_processing.py  example.ipynb  ml_utils.py  motif_logo.py  pyproject.toml  requirements.txt  rik_kernel-b123a1e3-15e5-448b-af01-5db4fa5eb6be.json  tcr_emb_code.py  tcr_emb_prototypes.ipynb  tcr_emb_vdjdb_donor.ipynb  tcremb.py  tcremb_athero.ipynb  tcremb_compare.ipynb  tcremb_dists.py  tcremb_run.py  tcremb_vdjdb.ipynb  tcremp_athero.ipynb  tcremp_dists.py  tcremp_run.py  test.py
.ipynb_checkpoints/: tcr_emb_prep-checkpoint.py
10x_proc/: donor1_top_tetramer.csv  donor2_top_tetramer.csv  donor3_top_tetramer.csv  donor4_top_tetramer.csv  melanoma_proc.ipynb
benchmark/: giana_res_TRA.txt  giana_res_TRB.txt  ismart_res_TRA.txt  ismart_res_TRB.txt  metrics.py  models.py  models_tcrdist.py  tcrdist_res_TRA.txt  tcremb_res_TRA.txt  tcremb_res_TRB.txt  tcremb_res_pred_enriched_TRA.txt  tcremb_res_pred_enriched_TRB.txt  tcremb_res_pred_enriched_between_TRA.txt  tcremb_res_pred_enriched_between_TRB.txt  tcremb_res_pred_enriched_sq_TRA.txt  tcremb_res_pred_enriched_sq_TRB.txt
benchmark/.ipynb_checkpoints/: tcrdist_res_TRB-checkpoint.txt
data/: exampletcremp_clstr_res_TRA_TRB.txt  exampletcremp_dists_TRA_TRB.txt  exampletcremp_pca_TRA_TRB.txt  exampletcremp_tsne_TRA_TRB.txt  olga_humanTRA_3000.txt  olga_humanTRB_3000.txt
data/data_prebuilt/: VDJdb_data_paired_example.csv
data/data_preped/: olga_humanTRA.txt  olga_humanTRA_100.txt  olga_humanTRA_1000.txt  olga_humanTRA_150.txt  olga_humanTRA_2000.txt  olga_humanTRA_300.txt  olga_humanTRA_500.txt  olga_humanTRA_5000.txt  olga_humanTRB.txt  olga_humanTRB_100.txt  olga_humanTRB_1000.txt  olga_humanTRB_150.txt  olga_humanTRB_2000.txt  olga_humanTRB_300.txt  olga_humanTRB_500.txt  olga_humanTRB_5000.txt
data/example/: VDJdb_data_paired_example.csv
data_scripts/: prototypes_olga.txt  prototypes_tra_olga.txt  prototypes_trb_aa.txt  prototypes_trb_olga.txt
mir/.ipynb_checkpoints/: __init__-checkpoint.py
mir/common/: clonotype.py  parser.py  repertoire.py
mir/comparative/: match.py  overlap.py  tcrnet.py
mir/distances/: __init__.py  aligner.py  graph.py  search.py
tcremb/: TCRemb.py  TCRemb_clf.py  TCRemb_clstr.py  TCRemb_clstr_pred.py  data_proc.py  metrics.py  ml_utils.py  motif_logo.py
tcremp/: TCRemP.py  TCRemP_clstr.py  TCRemb_clstr_pred.py  __init__.py  data_proc.py  metrics.py  ml_utils.py  motif_logo.py  old_tcremp_run.py  tcremp_classifier.py  tcremp_cluster.py  tcremp_cluster_enrich.py  tcremp_pipeline.py  tcremp_run.py
tcremp/resources/: olga_humanTRA.txt
(+6 files in other folders)
