[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcremp"
version = "0.0.1"
authors = [
  { name="yuliajk", email="yulia.mow@gmail.com" },
  { name="mikessh", email="mikhail.shugay@gmail.com" },
]
description = "A library prototype-based T-cell receptor (TCR) sequence embedding"
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
        "mir@git+https://github.com/antigenomics/mirpy.git@0.0.1-mirpy-initial",
        "biopython==1.81",
        "matplotlib==3.7.2",
        "numpy>=1.25.1",
        "olga==1.2.4",
        "pandas==2.0.3",
        "python_igraph==0.10.6",
        "scipy==1.11.2",
        "seaborn==0.12.2",
        "umap-learn==0.5.3",
        "scikit-learn==1.3.0",
        "textdistance==4.5.0",
        "plotnine==0.12.3",
        "kneed==0.8.5"
]
license = {text = "GPL-3.0 License"}


[project.urls]
Homepage = "https://github.com/yuliajk/tcremp"
Issues = "https://github.com/yuliajk/tcremp/issues"

[project.scripts]
tcremp-run = "tcremp.tcremp_run:main"

[tool.hatch.metadata]
allow-direct-references = true