[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcremp"
version = "0.0.1"
authors = [
  { name="yuliajk", email="yulia.mow@gmail.com" },
  { name="mikessh", email="mikhail.shugay@gmail.com" },
]
description = "A library prototype-based T-cell receptor (TCR) sequence embedding"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [ "antigen", "antibody", "t-cell", "receptor", "sequence", "embedding"]
requires-python = ">=3.11,<3.12"
dependencies = [
        "mir@git+https://github.com/antigenomics/mirpy.git@0.0.1-mirpy-initial",
        "biopython==1.81",
        "matplotlib==3.7.2",
        "numpy>=1.25.1; python_version < '3.12'",
        "numpy>=1.26.4; python_version >= '3.12'",
        "olga==1.2.4",
        "pandas==2.0.3",
        "python_igraph==0.10.6",
        "scipy==1.11.2",
        "seaborn==0.12.2",
        "umap-learn==0.5.3",
        "scikit-learn==1.3.0",
        "textdistance==4.5.0",
        "plotnine==0.12.3",
        "kneed==0.8.5"
]


[project.urls]
Homepage = "https://github.com/antigenomics/tcremp"
Issues = "https://github.com/antigenomics/tcremp/issues"

[project.scripts]
tcremp-run = "tcremp.tcremp_run:main"

[tool.hatch.metadata]
allow-direct-references = true